--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
   },
   "bugs": "http://github.com/devongovett/pdfkit/issues",
   "devDependencies": {
-    "coffee-script": ">=1.0.1",
-    "codemirror": "~3.20.0",
-    "markdown": "~0.5.0",
-    "jade": "~1.1.5",
-    "coffeeify": "^0.6.0",
-    "browserify": "^3.39.0",
-    "brfs": "~1.0.1",
-    "exorcist": "^0.1.5",
+    "blob-stream": "^0.1.2",
     "brace": "^0.2.1",
-    "blob-stream": "^0.1.2"
+    "brfs": "~1.0.1",
+    "browserify": "^3.39.0",
+    "codemirror": "~3.20.0",
+    "coffee-script": ">=1.0.1",
+    "coffeeify": "^0.6.0",
+    "exorcist": "^0.1.5",
+    "jade": "~1.1.5",
+    "json-loader": "^0.5.4",
+    "markdown": "~0.5.0",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "png-js": ">=0.1.0",
